# meshes

./: README.md  list_hwu.txt  list_nr_uoe.txt
palettes/sources/: palette120_100_120._14blend.blend  palette120_100_120._14blend.blend1  palette56_78_11p5.blend  palette56_78_11p5.blend1
platform/: platform.blend  platform.blend1
ramp_475_46_16/source/: ramp_475_46_16.blend  ramp_475_46_16.blend1
ramps_UOE/: 30x30_small.blend  40X40_10deg.blend  40X40_10deg_unbalanced.blend  40X40_10deg_unbalanced.blend1  40X40_15deg.blend
ramps_UOE/source/: 30x30_small.stl
scaffolding_model/: CMakeLists.txt  package.xml
scaffolding_model/meshes/: platform_cad_short.dae  platform_cad_short.stl  scaffolding.skp
scaffolding_model/scripts/: spawn_platform_cad  spawn_platform_cad_short
scaffolding_model/urdf/: platform_cad.urdf
scripts/: gen_urdf.py  stl_to_urdf.py
tcs_demo/: 40X40_10deg_unbalanced.blend  40X40_10deg_unbalanced.blend1  tcsdemo.blend  tcsdemo.blend1
tiles/source/: tile_60_60_5.blend  tile_90_60_14.blend  tile_90_60_14.blend1
urdf/30x30_small/: CMakeLists.txt  package.xml
urdf/40_40_10/: CMakeLists.txt  package.xml
urdf/40x40_10deg/: CMakeLists.txt  package.xml
urdf/40x40_10deg_unbalanced/: CMakeLists.txt  package.xml
urdf/40x40_15deg/: CMakeLists.txt  package.xml
urdf/platform/: CMakeLists.txt  package.xml
urdf/platform_cad/: CMakeLists.txt  package.xml
urdf/platform_cad_short/: CMakeLists.txt  package.xml
urdf/ramp_475_46_16/: CMakeLists.txt  package.xml
urdf/scaffolding/: CMakeLists.txt  package.xml
urdf/tcsdemo/: CMakeLists.txt  (+1 more)
(+43 files in other folders)
